--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__top">
+                <div class="logo">
+                    <a href="#">
+                        <img src="images/logo.svg" alt="logo">
+                    </a>
+                </div>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item"><a href="#">Home</a></li>
+                        <li class="menu__list-item"><a href="#">Work</a></li>
+                        <li class="menu__list-item"><a href="#">About</a></li>
+                        <li class="menu__list-item"><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header-btn">
+                    <a class="login" href="#">login</a>
+                    <a class="sign-up" href="#">sign-up</a>
+                </div>
 
+            </div>
+        </div>
+    </header>
 
     <script src="js/main.js"></script>
 </body>
